--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@photo-sphere-viewer/core": "^5.14.0",
     "@photo-sphere-viewer/markers-plugin": "^5.14.0",
     "next": "16.0.5",
+    "pannellum": "^2.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sharp": "^0.34.5"
